Исправил отправку пустых полей при редактировании заказа